# doppler_ed

./: CMakeLists.txt  ReadMe.md  aboutdialog.cpp  aboutdialog.ui  animator.cpp  animator.h  animatorwidget.cpp  animatorwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  synthesizer.cpp  synthesizer.h
img/: person_listening.xcf
original images/: person_waiting.xcf
